add  description how build project with maven